<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single"
        android:id="@+id/basics" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_assessment"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_action_chat"
            android:title="@string/menu_slideshow" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/additionals">
        <item
            android:id="@+id/aboutapp"
            android:icon="@drawable/ic_action_info"
            android:title="@string/about_title" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_action_alternate_email"
            android:title="@string/contact_us"/>
    </group>
</menu>