<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.samiamare.covid_19.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.samiamare.covid_19.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.samiamare.covid_19.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/aboutapp"
        android:name="com.samiamare.covid_19.ui.about.About"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/contact_us"
        android:name="com.samiamare.covid_19.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/contact_fragment"/>

</navigation>