<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.contact.ContactFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="133dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/apptitle"
        style="@style/contactinfo"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="74dp"
        android:text="Contact Info"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView2"
        style="@style/contacthead"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apptitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="102dp"
        android:text="Phone Number:"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView4"
        style="@style/contacthead"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:text="Email:"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView6"
        style="@style/contacthead"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="102dp"
        android:text="Address:"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView3"
        style="@style/contactcontent"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="94dp"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView5"
        style="@style/contactcontent"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="90dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView7"
        style="@style/contactcontent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="56dp"
        android:text="@string/address"
        android:textAlignment="center"
        android:textColor="#fff" />

</RelativeLayout>